# gorgonwikibot

./: .gitignore  LICENSE  README.md  projectgorgon_family.py  pyproject.toml  user-config.py  user-password.py
gorgonwikibot/: content.py  entrypoint.py  quest.py
scripts/: create_ability_pages.py  create_ai_profiles.py  create_missing_quest_pages.py  create_pet_profiles.py  create_quest_pages.py  generate_ability_templates.py
tests/: __init__.py  conftest.py  test_ability.py  test_ai.py  test_create_ability_pages.py  test_create_ai_profiles.py  test_e2e.py
userscripts/: create_ai_profiles.py  create_missing_quest_pages.py  generate_ability_templates.py
userscripts/GorgonWiki/: RemoteData.py  WikiTools.py  cdn.py  content.py  quest.py
