[tool.poetry]
name = "gorgonwikibot"
version = "1.0.0"
description = "Bot scripts for the Project: Gorgon Wiki"
authors = ["desophos <1887450+desophos@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
pywikibot = "^3.0.20200111"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
