[tool.poetry]
name = "gorgonwikibot"
version = "1.0.0"
description = "Bot scripts for the Project: Gorgon Wiki"
authors = ["desophos <1887450+desophos@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22"
pywikibot = "^6"
wikitextparser = "^0.47"
pytest = "^6"
coverage = "^5.3"
pytest-profiling = "^1.7"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b2", allow-prereleases = true}

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
